<resources>
    <string name="app_name">CHIBoard</string>
    <string name="tv_page_main">CHIBoard</string>
    <string name="tv_page_about">制作人名单:\n陈怡君\n胡未名\n感谢支持！</string>
    <string name="bt_back">返回</string>
    <string name="bt_show_license">License</string>
    <string name="bt_close">X</string>
    <string name="bt_add_piece">下子</string>
    <string name="bt_remove_piece">提子</string>
    <string name="tv_fragment_license">__TEMP</string>

</resources>